--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "dialogue-smith-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "prepublish": "tsc"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "ts-node": "^10.9.1"
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
