--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dialogue-smith-test",
+  "name": "dialogue-smith-api-library",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
